login screen full

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,11 @@
       "target": "es2015",
       "moduleResolution": "node",
       "sourceMap": true,
-      "declaration": false,
+     // "declaration": false,
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "noEmitHelpers": true,
-      "noEmitOnError": true,
+      //"noEmitHelpers": true,
+      "noEmitOnError": true, 
       "skipLibCheck": true,
       "lib": [
           "es2017",
