--- a/package.json
+++ b/package.json
@@ -32,12 +32,11 @@
     "core-js": "^3.6.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.6.0",
-    "schematics-scss-migrate": "^1.1.7",
     "tslib": "1.10.0",
     "zone.js": "~0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.0",
+    "@angular-devkit/build-angular": "~0.1001.0",
     "@angular/cli": "~10.1.0",
     "@angular/compiler-cli": "~10.1.0",
     "@nativescript/android": "7.0.0",
@@ -51,12 +50,12 @@
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.2.3",
+    "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "^7.0.0",
+    "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "^6.1.3",
     "typescript": "~4.0.3"
